jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin
        ports:
        - containerPort: 8096
          name: web
        volumeMounts:
        - name: config
          mountPath: /config
        - name: medias
          mountPath: /data
        resources:
          requests:
            memory: 100Mi
            cpu: 50m
          limits:
            memory: 1Gi
            cpu: 800m  
      volumes:
        - name: medias
          hostPath: 
            path: /mnt/storage/medias
            readOnly: true
        - name: config   
          hostPath: 
            path: /home/logikdev/configs/jellyfin
