jellyfin/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  serviceName: jellyfin
  template:
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin
        ports:
        - containerPort: 8096
          name: web
        volumeMounts:
        - name: jellyfin
          mountPath: /config
        - name: jellyfin-medias
          mountPath: /medias
        resources:
          requests:
            memory: 100Mi
            cpu: 50m
          limits:
            memory: 1Gi
  volumeClaimTemplates:
  - metadata:
      name: jellyfin
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: jellyfin-medias
    spec:
      storageClassName: nfs-medias
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
