jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8096
      name: http
  selector:
    app: jellyfin
