jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: jellyfin
spec:
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:nx+oR5Uykdn71DKGIOjU4SkHkzE6eDfaINFkoA==,iv:kFjkj7YDCFniizhJVgpG2bkG9u0NUOY0A1yGnwR0UQE=,tag:F86RUOe3J0O27jEaxwy5SA==,type:str]
          middlewares: []
          services:
            - kind: Service
              name: jellyfin
              port: 80
    tls:
      secretName: letsencrypt-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-09-09T22:41:18Z"
    mac: ENC[AES256_GCM,data:VRx9enGXhFFngMs048lUNIEeWTSeSdRCPNHhH1BcWBjv/etn/Fg+sYQBwENS6j8eJCUjv219s2Hdlo0IA1j0oUMIkilFhsc7mgvO0Uhq00IvrU88Fp6+MvwW6/zmHa7TpULZ7h5Tp75o4jT+WHA7AZBqj9aDYvX9RcY2MN9H3SU=,iv:yamXt3+U5WY992F6clCklC5va1FNxsHTpk7L3tfU0t0=,tag:I+48iDNCdhDN7y4wOHKaag==,type:str]
    pgp:
        - created_at: "2023-09-09T22:41:17Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAyyGYy7YCFAQARAAkawEIuF5+s/H04rJfaGFbIv49nzTETFjZhKR/gDCnfMt
[...]
            GPgFUh7iwBSq
            =z2X0
            -----END PGP MESSAGE-----
          fp: 75C3F62D6A9AA2165875F5C680A364E41D3C47AF
    encrypted_regex: ^(match)$
    version: 3.7.3
